Fix grid-items spacing, margin, flex-grow

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -47,11 +47,13 @@ figure {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
+  flex-grow: 1;
+  margin: 1rem -1rem;
 }
 
 .brewery-list__item {
   width: calc(100% / 3 - 2rem);
-  margin: 0.5rem;
+  margin: 1rem;
 }
 
 .brewery-card {
